--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div id="details" class="details-wrap">
         <div id="add-item" class="add-items-wrap">
           <div class="input-group ">
-            <input type="text" class="form-control addtexbox" placeholder="Add a to-do" aria-label="Add a to-do" aria-describedby="button-addon2">
+            <input type="text" id="taskbox" class="form-control addtexbox" placeholder="Add a to-do" aria-label="Add a to-do" aria-describedby="button-addon2">
            
-              <button class="btn btn-outline-secondary addbtn" type="button" id="button-addon2">+</button>
+              <button class="btn btn-outline-secondary addbtn" type="button" id="addBtn">+</button>
             
           </div>
         </div>
